--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lint:test:fix": "tslint -c ./tslint.json -c ./tslint.test.json **/*.ts **/*.js --fix",
     "lint:src": "tslint -c ./tslint.json src/**/*.ts **/*.js",
     "lint:src:fix": "tslint -c ./tslint.json src/**/*.ts **/*.js --fix",
-    "lint": "yarn lint:test && yarn lint:src",
-    "lint:fix": "yarn lint:test:fix && yarn lint:src:fix",
+    "lint": "yarn lint:src && yarn lint:test",
+    "lint:fix": "yarn lint:src:fix && yarn lint:test:fix",
     "format": "yarn lint && yarn prettier",
     "format:fix": "yarn lint:fix && yarn prettier:fix",
     "link": " lerna bootstrap && yarn lerna link",
